# GPUCorrectThermo

./: CMakeLists.txt  PTHY.txt  dfThermo.cpp  dfThermo.cu  dfThermo.h  main.cpp
